--- a/aidat-takip.html
+++ b/aidat-takip.html
@@ -17,8 +17,6 @@
 <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/core.js' %}"></script>
-
-<!-- Google Web Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
 
 
@@ -47,13 +45,13 @@
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-            <li><a href="/panel-yonetici.html"><i class="li-home"></i>Ana Sayfa</a></li>
-            <li><a href="/daireler/" style="pointer-events: auto;"><i class="li-house"></i>Daire Bilgileri</a></li>
-            <li><a href="/kira-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
-            <li><a href="duyuru.html"><i class="li-bell"></i>Duyurular</a></li>
-            <li><a href="personel-takip.html"><i class="li-calendar"></i>Personel Takibi</a></li>
-            <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
-            <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
+            <li><a href="panel-yonetici.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
+                    <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
+                    <li><a href="/kira-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
+                    <li><a href="duyuru.html"><i class="li-bell"></i>Duyurular</a></li>
+                    <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
+                    <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
+                    <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
 
         </ul>
       </div>  
