--- a/panel-personel.html
+++ b/panel-personel.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -49,7 +50,7 @@
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
           <li><a href="panel-personel.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
-          <li><a href="gorev_p.html"><i class="li-calendar"></i>Görevler</a></li>
+          <li><a href="/gorevlerim/"><i class="li-calendar"></i>Görevler</a></li>
           <li><a href="duyuru_p.html"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="istek_sikayet_p.html"><i class="li-email"></i>İstek & Şikayet</a></li>
           <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
