--- a/panel-yonetici.html
+++ b/panel-yonetici.html
@@ -1,4 +1,5 @@
 <!-- panel-yonetici.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -28,7 +29,7 @@
                     <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
                     <li><a href="/kira-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
                     <li><a href="duyuru.html"><i class="li-bell"></i>Duyurular</a></li>
-                    <li><a href="personel-takip.html"><i class="li-calendar"></i>Personel Takibi</a></li>
+                    <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
                     <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
 
