duyuru kısmı bitti

--- a/duyuru.html
+++ b/duyuru.html
@@ -7,10 +7,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yönetici Paneli</title>
-<link rel="shortcut icon" href="assets/img/favicon.png">
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/styles.css" />
-<link id="theme" rel="stylesheet" href="assets/css/themes/theme-green.min.css" />
+<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+<link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}" />
 
 </head>
 
@@ -28,7 +28,8 @@
 
     <!-- Logo -->
     <a href="index-dark.html" class="logo">
-        <img src="assets/img/logo-light.svg" alt="">
+        <a href="/" class="logo mr-15"><img src="{% static 'img/logo-light.svg' %}" height="80" alt=""></a>
+
     </a>
 
     <!-- Navigation -->
@@ -38,7 +39,7 @@
           <li><a href="panel-yonetici.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
                     <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
                     <li><a href="/kira-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
-                    <li><a href="/duyurular/"class="active" style="pointer-events: auto;"><i class="li-bell"></i>Duyurular</a></li>
+                    <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
                     <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
                     <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
@@ -59,7 +60,7 @@
     <h4 class="mt-60">Duyurular</h4>
 
     <!-- Yönetici ise bu buton görünür -->
-    <div id="admin-controls" style="margin-bottom: 20px; display: none;">
+    <div id="admin-controls" style="margin-bottom: 20px;">
       <button id="openModalBtn" class="btn btn-primary btn-sm">+ Yeni Duyuru Ekle</button>
     </div>
 
@@ -67,10 +68,13 @@
     <div id="announcementModal" class="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6);">
       <div class="modal-content" style="background: #fff; margin: 10% auto; padding: 20px; width: 50%; border-radius: 10px;">
         <h5>Yeni Duyuru</h5>
-        <input type="text" id="announcementTitle" class="form-control mb-3" placeholder="Duyuru başlığı">
-        <textarea id="announcementText" class="form-control mb-3" placeholder="Duyuru metni" rows="4"></textarea>
-        <button id="saveAnnouncementBtn" class="btn btn-primary">Kaydet</button>
-        <button id="closeModalBtn" class="btn btn-secondary float-right">Kapat</button>
+        <form method="POST" action="{% url 'duyuru_listesi' %}">
+          {% csrf_token %}
+          <input type="text" name="title" class="form-control mb-3" placeholder="Duyuru başlığı" required>
+          <textarea name="content" class="form-control mb-3" placeholder="Duyuru metni" rows="4" required></textarea>
+          <button type="submit" class="btn btn-primary">Kaydet</button>
+          <button type="button" id="closeModalBtn" class="btn btn-secondary float-right">Kapat</button>
+        </form>
       </div>
     </div>
 
@@ -85,14 +89,15 @@
         </thead>
         <tbody>
           {% for duyuru in duyurular %}
-          <tr>
+            <tr>
               <td>{{ duyuru.title }}</td>
               <td>{{ duyuru.content }}</td>
-          </tr>
+            </tr>
           {% empty %}
-          <tr><td colspan="2" class="text-center">Henüz duyuru yok.</td></tr>
+            <tr><td colspan="2" class="text-center">Henüz duyuru yok.</td></tr>
           {% endfor %}
-          </tbody>
+          
+        </tbody>
       </table>
     </div>
 
@@ -100,86 +105,7 @@
 </section>
 
 
-<script>
-  const isAdmin = true;
-  const duyurular = [
-    { title: "Asansör Bakımı", text: "12 Nisan 2025 tarihinde asansör bakımı yapılacaktır." },
-    { title: "Bahçe Temizliği", text: "Bahçe temizlik işlemleri 14 Nisan'da başlayacaktır." }
-  ];
 
-  const tableBody = document.querySelector("#duyuru-tablosu tbody");
-  const modal = document.getElementById("announcementModal");
-  const titleInput = document.getElementById("announcementTitle");
-  const textInput = document.getElementById("announcementText");
-  const openModalBtn = document.getElementById("openModalBtn");
-  const closeModalBtn = document.getElementById("closeModalBtn");
-  const saveAnnouncementBtn = document.getElementById("saveAnnouncementBtn");
-
-  let duzenlemeIndex = null;
-
-  if (isAdmin) document.getElementById("admin-controls").style.display = "block";
-
-  function renderTable() {
-    tableBody.innerHTML = "";
-    duyurular.forEach((a, index) => {
-      const row = document.createElement("tr");
-
-      row.innerHTML = `
-        <td>${a.title}</td>
-        <td>${a.text}
-          <button class="btn btn-sm btn-danger btn-sm float-end" style="float: right;padding: 2px 7px; font-size: 1.2rem; margin-left: 0.75rem" onclick="sil(${index})" title="Sil">🗑</button>
-          <button class="btn btn-warning btn-sm float-end" style="float: right;padding: 3px; font-size: 1.1rem" onclick="duzenle(${index})" title="Düzenle">
-            <i class="li-pencil"></i>
-          </button>
-        </td>
-      `;
-      tableBody.appendChild(row);
-    });
-  }
-
-  function duzenle(index) {
-    duzenlemeIndex = index;
-    titleInput.value = duyurular[index].title;
-    textInput.value = duyurular[index].text;
-    modal.style.display = "block";
-  }
-
-  function sil(index) {
-    if (confirm("Bu duyuruyu silmek istediğinize emin misiniz?")) {
-      duyurular.splice(index, 1);
-      renderTable();
-    }
-  }
-
-  openModalBtn.onclick = () => {
-    duzenlemeIndex = null;
-    titleInput.value = "";
-    textInput.value = "";
-    modal.style.display = "block";
-  };
-
-  closeModalBtn.onclick = () => {
-    modal.style.display = "none";
-  };
-
-  saveAnnouncementBtn.onclick = () => {
-    const title = titleInput.value.trim();
-    const text = textInput.value.trim();
-
-    if (!title || !text) return alert("Başlık ve metin boş olamaz.");
-
-    if (duzenlemeIndex !== null) {
-      duyurular[duzenlemeIndex] = { title, text };
-    } else {
-      duyurular.unshift({ title, text });
-    }
-
-    modal.style.display = "none";
-    renderTable();
-  };
-
-  renderTable();
-</script>
 
 <style>
   #announcementModal input[type="text"],
@@ -235,6 +161,19 @@
 <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/core.js' %}"></script>
+
+<script>
+  $(document).ready(function() {
+    $("#openModalBtn").click(function() {
+      $("#announcementModal").show();
+    });
+
+    $("#closeModalBtn").click(function() {
+      $("#announcementModal").hide();
+    });
+  });
+</script>
+
 </body>
 
 </html>
