--- a/aidat-kullanıcı.html
+++ b/aidat-kullanıcı.html
@@ -54,7 +54,7 @@
               <i class="li-moneybag"></i> Kira Takibi
             </a>
           </li>
-          <li><a href="duyuru_k.html"><i class="li-bell"></i>Duyurular</a></li>
+          <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="randevu.html"><i class="li-clock"></i>Randevu Alma</a></li>
           <li><a href="istek_sikayet_k.html"><i class="li-email"></i>İstek & Şikayet</a></li>
           <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
