--- a/duyuru_k.html
+++ b/duyuru_k.html
@@ -1,5 +1,7 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
 
 <!-- Meta -->
@@ -9,21 +11,22 @@
 <!-- Title -->
 <title>Skill - Modern &amp; Creative HTML5 Template</title>
 
-<!-- Favicons -->
-<link rel="shortcut icon" href="assets/img/favicon.png">
-<link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
 
-<!-- Google Web Fonts -->
+<!-- Favicons -->
+<link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+<link rel="apple-touch-icon" href="{% static 'img/favicon_60x60.png' %}">
+<link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/favicon_76x76.png' %}">
+<link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/favicon_120x120.png' %}">
+<link rel="apple-touch-icon" sizes="152x152" href="{% static 'img/favicon_152x152.png' %}">
+
+<!-- Google Web Fonts (Bu kalsın çünkü dış bağlantı) -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:600,700" rel="stylesheet">
 
 <!-- CSS Styles -->
-<link rel="stylesheet" href="assets/css/styles.css" />
+<link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 
-<!-- CSS Base -->
-<link id="theme" rel="stylesheet" href="assets/css/themes/theme-green.min.css" />
+<!-- CSS Theme -->
+<link id="theme" rel="stylesheet" href="{% static 'css/themes/theme-green.min.css' %}" />
 
 </head>
 
@@ -41,7 +44,8 @@
 
     <!-- Logo -->
     <a href="index-dark.html" class="logo">
-        <img src="assets/img/logo-light.svg" alt="">
+      <img src="{% static 'img/logo-light.svg' %}" alt="">
+
     </a>
 
     <!-- Navigation -->
@@ -50,7 +54,7 @@
         <ul class="nav nav-primary">
             <li><a href="panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
             <li><a href="aidat-kullanıcı.html"><i class="li-moneybag"></i>Aidat Takibi</a></li>
-            <li><a href="duyuru_k.html" class="active"><i class="li-bell"></i>Duyurular</a></li>
+            <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
             <li><a href="randevu.html"><i class="li-clock"></i>Randevu Alma</a></li>
             <li><a href="istek_sikayet_k.html"><i class="li-email"></i>İstek & Şikayet</a></li>
             <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
@@ -72,29 +76,18 @@
   
       <!-- Duyuru Listesi -->
       <div id="announcementList" class="mt-30">
-        <!-- Duyurular JS ile buraya eklenecek -->
+        {% for duyuru in duyurular %}
+          <div class="card card-body mb-3" style="padding: 10px; padding-bottom: 0px">
+            <h6><strong>{{ duyuru.title }}</strong></h6>
+            <p>{{ duyuru.content }}</p>
+          </div>
+        {% empty %}
+          <div class="text-center">Henüz duyuru bulunmamaktadır.</div>
+        {% endfor %}
       </div>
     </div>
   </section>
   
-  <script>  
-    const announcements = [
-      { title: "Asansör Bakımı", text: "12 Nisan 2025 tarihinde asansör bakımı yapılacaktır." },
-      { title: "Bahçe Temizliği", text: "Bahçe temizlik işlemleri 14 Nisan'da başlayacaktır." }
-    ];
-    const listContainer = document.getElementById('announcementList');
-    
-    function renderAnnouncements() {
-      listContainer.innerHTML = announcements.map(a => `
-        <div class="card card-body mb-3" style="padding: 10px; padding-bottom: 0px">
-          <h6><strong>${a.title}</strong></h6>
-          <p>${a.text}</p>
-        </div>
-      `).join('');
-    }
-  
-    renderAnnouncements();
-  </script>
 </div>
 <!-- Content / End -->
 
@@ -105,7 +98,7 @@
             <div class="col-xl-5 text-xl-left text-xs-center">
                 <div class="module-group">
                     <div class="module copyright">
-                        <a href="index.html" class="logo mr-15"><img src="assets/img/logo-light.svg" height="80" alt=""></a>
+                        <a href="index.html" class="logo mr-15"><img src="img/logo-light.svg" height="80" alt=""></a>
                         <span class="text-muted">Copyright Skill 2016©. Made by <a href="http://www.suelo.pl/" target="blank">Suelo</a>.</span>
                     </div>
                 </div>
@@ -137,13 +130,11 @@
 <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
 
 <!-- JS Libraries -->
-<script src="assets/js/jquery-2.2.4.min.js"></script>
+<script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+<script src="{% static 'js/plugins.js' %}"></script>
+<script src="{% static 'js/core.js' %}"></script>
 
-<!-- JS Plugins -->
-<script src="assets/js/plugins.js"></script>
 
-<!-- JS Core -->
-<script src="assets/js/core.js"></script>
 
 </body>
 
