--- a/istek_sikayet_k.html
+++ b/istek_sikayet_k.html
@@ -70,7 +70,7 @@
         <ul class="nav nav-primary">
             <li><a href="panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
             <li><a href="aidat-kullanıcı.html"><i class="li-moneybag"></i>Aidat Takibi</a></li>
-            <li><a href="duyuru_k.html"><i class="li-bell"></i>Duyurular</a></li>
+            <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
             <li><a href="randevu.html"><i class="li-clock"></i>Randevu Alma</a></li>
             <li><a href="istek_sikayet_k.html" class="active"><i class="li-email"></i>İstek & Şikayet</a></li>
             <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
