--- a/panel-personel.html
+++ b/panel-personel.html
@@ -51,7 +51,7 @@
         <ul class="nav nav-primary">
           <li><a href="panel-personel.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
           <li><a href="/gorevlerim/"><i class="li-calendar"></i>Görevler</a></li>
-          <li><a href="duyuru_p.html"><i class="li-bell"></i>Duyurular</a></li>
+          <li><a href="{% url 'duyuru_p' %}"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="istek_sikayet_p.html"><i class="li-email"></i>İstek & Şikayet</a></li>
           <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
       </ul>
