--- a/gorev_p.html
+++ b/gorev_p.html
@@ -49,7 +49,7 @@
           <li><a href="panel-personel.html"><i class="li-home"></i>Ana Sayfa</a></li>
           <li><a href="{% url 'calisan_gorevleri' %}"><i class="li-calendar"></i>Görevler</a></li>
           <li><a href="{% url 'duyuru_p' %}"><i class="li-bell"></i>Duyurular</a></li>
-          <li><a href="istek_sikayet_p.html"><i class="li-email"></i>İstek & Şikayet</a></li>
+          <li><a href="/istek_sikayet_personel/"><i class="li-email"></i>İstek & Şikayet</a></li>
           <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
         </ul>
       </div>  
