--- a/panel-yonetici.html
+++ b/panel-yonetici.html
@@ -30,7 +30,7 @@
                     <li><a href="/kira-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
                     <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
                     <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
-                    <li><a href="istek_sikayet.html"><i class="li-email"></i>İstek & Şikayet</a></li>
+                    <li><a href="/istek_sikayet/"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
 
                 </ul>
