--- a/aidat-kullanıcı.html
+++ b/aidat-kullanıcı.html
@@ -57,7 +57,7 @@
           <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="/randevu/"><i class="li-clock"></i>Randevu Alma</a></li>
           <li><a href="/istek_sikayet_sakin/"><i class="li-email"></i>İstek & Şikayet</a></li>
-          <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
+          <li><a href="/logout/" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
 
       </ul>
       </div>  
