--- a/istek_sikayet.html
+++ b/istek_sikayet.html
@@ -106,11 +106,11 @@
         <ul class="nav nav-primary">
           <li><a href="panel-yonetici.html"><i class="li-home"></i>Ana Sayfa</a></li>
           <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
-          <li><a href="aidat-takip.html"><i class="li-moneybag"></i>Aidat Takibi</a></li>
-          <li><a href="duyuru.html"><i class="li-bell"></i>Duyurular</a></li>
-          <li><a href="personel-takip.html"><i class="li-calendar"></i>Personel Takibi</a></li>
-          <li><a href="istek_sikayet.html" class="active"><i class="li-email"></i>İstek & Şikayet</a></li>
-          <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
+          <li><a href="/aidat-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
+          <li><a href="/duyurular/"><i class="li-bell"></i>Duyurular</a></li>
+          <li><a href="/personel-takip/"><i class="li-calendar"></i>Personel Takibi</a></li>
+          <li><a href="istek_sikayet" class="active"><i class="li-email"></i>İstek & Şikayet</a></li>
+          <li><a href="/logout/" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
         </ul>
       </div>  
       <span class="selector"></span>
