--- a/istek_sikayet_p.html
+++ b/istek_sikayet_p.html
@@ -71,10 +71,10 @@
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
           <li><a href="panel-personel.html"><i class="li-home"></i>Ana Sayfa</a></li>
-          <li><a href="{% url 'calisan_gorevleri' %}"><i class="li-calendar"></i>Görevler</a></li>
-          <li><a href="{% url 'duyuru_p' %}"><i class="li-bell"></i>Duyurular</a></li>
+          <li><a href="/gorevlerim/"><i class="li-calendar"></i>Görevler</a></li>
+          <li><a href="/duyuru_p/"><i class="li-bell"></i>Duyurular</a></li>
           <li><a href="/istek_sikayet_personel/"><i class="li-email"></i>İstek & Şikayet</a></li>
-          <li><a href="index-dark.html" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
+          <li><a href="/logout/" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
         </ul>
       </div>  
       <span class="selector"></span>
