--- a/panel-yonetici.html
+++ b/panel-yonetici.html
@@ -26,10 +26,10 @@
             <div class="nav-wrapper">
                 <ul class="nav nav-primary">
                     <li><a href="panel-yonetici.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
-                    <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
-                    <li><a href="/aidat-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
-                    <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
-                    <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
+                    <li><a href="/daireler/" class="" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
+                    <li><a href="/aidat-takip/" class="" style="pointer-events: auto;"><i class="li-moneybag"></i> Kira Takibi</a></li>
+                    <li><a href="/duyurular/" class="" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
+                    <li><a href="/personel-takip/" class="" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
                     <li><a href="/istek_sikayet/"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
 
