--- a/aidat-takip.html
+++ b/aidat-takip.html
@@ -45,11 +45,11 @@
     <nav id="main-menu">
       <div class="nav-wrapper">
         <ul class="nav nav-primary">
-            <li><a href="panel-yonetici.html" class="active"><i class="li-home"></i>Ana Sayfa</a></li>
-                    <li><a href="/daireler/" class="active" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
+            <li><a href="panel-yonetici.html" class=""><i class="li-home"></i>Ana Sayfa</a></li>
+                    <li><a href="/daireler/" class="" style="pointer-events: auto;"><i class="li-house"></i> Daire Bilgileri</a></li>
                     <li><a href="/aidat-takip/" class="active" style="pointer-events: auto;"><i class="li-moneybag"></i> Aidat Takibi</a></li>
-                    <li><a href="/duyurular/" class="active" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
-                    <li><a href="/personel-takip/" class="active" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
+                    <li><a href="/duyurular/" class="" style="pointer-events: auto;"><i class="li-bell"></i> Duyurular</a></li>
+                    <li><a href="/personel-takip/" class="" style="pointer-events: auto;"><i class="li-calendar"></i> Personel Takibi</a></li>
                     <li><a href="/istek_sikayet/"><i class="li-email"></i>İstek & Şikayet</a></li>
                     <li><a href="/logout/" style="pointer-events: auto;"><i class="li-arrow6"></i> Çıkış Yap</a></li>
 
@@ -66,35 +66,34 @@
     
     <!-- Section -->
     <section class="section">
-
-     <!-- ### AİDAT OLUŞTURMA FORMU ### -->
-     <div class="card mb-4">
-        <div class="card-header"><h5>Bu Ayın Aidatını Oluştur</h5></div>
-        <div class="card-body">
-          <form method="post" action="{% url 'aidat_takip' %}">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="bulk_tutar">Aidat Tutarı (₺)</label>
-              <input
-                type="number" step="0.01" min="0"
-                name="bulk_tutar" id="bulk_tutar"
-                class="form-control w-25 d-inline-block"
-                placeholder="Örn. 750.00" required
-              />
-              <button type="submit" name="do_bulk_create" class="btn btn-primary ml-2">
-                Oluştur
-              </button>
-            </div>
-            {% if messages %}
-              {% for m in messages %}
-                <div class="alert alert-{{ m.tags }} mt-2">{{ m }}</div>
-              {% endfor %}
-            {% endif %}
-          </form>
-        </div>
-      </div>
-
         <div class="container container-sm">
+            <!-- ### AİDAT OLUŞTURMA FORMU ### -->
+            <div class="card mb-40">
+              <div class="card-header"><h5>Bu Ayın Aidatını Oluştur</h5></div>
+              <div class="card-body">
+                <form method="post" action="{% url 'aidat_takip' %}">
+                  {% csrf_token %}
+                  <div class="form-group">
+                    <label for="bulk_tutar">Aidat Tutarı (₺)</label>
+                    <input
+                      type="number" step="0.01" min="0"
+                      name="bulk_tutar" id="bulk_tutar"
+                      class="form-control w-25 d-inline-block"
+                      placeholder="Örn. 750.00" required
+                    />
+                    <button type="submit" name="do_bulk_create" class="btn btn-primary ml-2 btn-sm mb-5">
+                      Oluştur
+                    </button>
+                  </div>
+                  {% if messages %}
+                    {% for m in messages %}
+                      <div class="alert alert-{{ m.tags }} mt-2">{{ m }}</div>
+                    {% endfor %}
+                  {% endif %}
+                </form>
+              </div>
+            </div>
+
            <!-- ### ÖDENMEMİŞ AİDATLAR LİSTESİ ### -->
             <div class="card">
                 <div class="card-header">
@@ -189,43 +188,6 @@
 
 </div>
 <!-- Content / End -->
-
-<!-- Footer -->
-<footer id="footer" class="dark bg-dark">
-    <div class="container-fluid container-custom">
-        <div class="row">
-            <div class="col-xl-5 text-xl-left text-xs-center">
-                <div class="module-group">
-                    <div class="module copyright">
-                        <a href="{% url 'aidat_takip' %}" class="logo mr-15">
-                            <img src="{% static 'img/logo-light.svg' %}" height="80" alt="Site Logo">
-                          </a>
-                        <span class="text-muted">Copyright Skill 2016©. Made by <a href="http://www.suelo.pl/" target="blank">Suelo</a>.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-7 text-xl-right text-xs-center">
-                <div class="module-group">
-                    <div class="module">
-                        <span class="text-muted mr-5">Language:</span>
-                        <ul class="nav-footer">
-                            <li class="active"><a href="#">English</a></li>
-                            <li><a href="#">Polish</a></li>
-                        </ul>
-                    </div>
-                    <div class="module">
-                        <span class="text-muted mr-10">Follow Us</span>
-                        <a href="#" class="icon icon-circle icon-hover icon-facebook icon-sm"><i class="ti-facebook"></i></a>
-                        <a href="#" class="icon icon-circle icon-hover icon-twitter icon-sm"><i class="ti-twitter-alt"></i></a>
-                        <a href="#" class="icon icon-circle icon-hover icon-google icon-sm"><i class="ti-google"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- Footer / End -->
-
 
 <!-- Mobile Navigation Toggle -->
 <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
