--- a/duyuru_k.html
+++ b/duyuru_k.html
@@ -54,7 +54,7 @@
         <ul class="nav nav-primary">
             <li><a href="panel-sakin.html"><i class="li-home"></i>Ana Sayfa</a></li>
             <li><a href="/sakin-aidat-takip/"><i class="li-moneybag"></i>Aidat Takibi</a></li>
-            <li><a href="{% url 'duyuru_k' %}"><i class="li-bell"></i>Duyurular</a></li>
+            <li><a href="{% url 'duyuru_k' %}" class="active"><i class="li-bell"></i>Duyurular</a></li>
             <li><a href="/randevu/"><i class="li-clock"></i>Randevu Alma</a></li>
             <li><a href="/istek_sikayet_sakin/"><i class="li-email"></i>İstek & Şikayet</a></li>
             <li><a href="/logout/" onclick="cikisYap()"><i class="li-arrow6"></i>Çıkış Yap</a></li>
@@ -90,41 +90,6 @@
   
 </div>
 <!-- Content / End -->
-
-<!-- Footer -->
-<footer id="footer" class="dark bg-dark">
-    <div class="container-fluid container-custom">
-        <div class="row">
-            <div class="col-xl-5 text-xl-left text-xs-center">
-                <div class="module-group">
-                    <div class="module copyright">
-                        <a href="index.html" class="logo mr-15"><img src="img/logo-light.svg" height="80" alt=""></a>
-                        <span class="text-muted">Copyright Skill 2016©. Made by <a href="http://www.suelo.pl/" target="blank">Suelo</a>.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-7 text-xl-right text-xs-center">
-                <div class="module-group">
-                    <div class="module">
-                        <span class="text-muted mr-5">Language:</span>
-                        <ul class="nav-footer">
-                            <li class="active"><a href="#">English</a></li>
-                            <li><a href="#">Polish</a></li>
-                        </ul>
-                    </div>
-                    <div class="module">
-                        <span class="text-muted mr-10">Follow Us</span>
-                        <a href="#" class="icon icon-circle icon-hover icon-facebook icon-sm"><i class="ti-facebook"></i></a>
-                        <a href="#" class="icon icon-circle icon-hover icon-twitter icon-sm"><i class="ti-twitter-alt"></i></a>
-                        <a href="#" class="icon icon-circle icon-hover icon-google icon-sm"><i class="ti-google"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- Footer / End -->
-
 
 <!-- Mobile Navigation Toggle -->
 <div id="mobile-nav-toggle" class="header-dark"><span></span><span></span><span></span></div>
